--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -20,9 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          if exist requirements.txt (
+          if (Test-Path "requirements.txt") {
             pip install -r requirements.txt
-          )
+          }
           pip install pyinstaller
 
       - name: Build EXE
